--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -27,4 +27,5 @@ rand_xoshiro = "0.4.0"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.51"
 
+indoc = "0.3.5"
 unindent = "0.1.5"
