--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -24,8 +24,10 @@ rand = "0.7.3"
 rand_distr = "0.2.2"
 rand_xoshiro = "0.4.0"
 
+indexmap = "1.3"
+
 serde = { version = "1.0.106", features = ["derive"] }
-serde_json = "1.0.51"
+serde_json = { version = "1.0.51", features = ["preserve_order"] }
 
 indoc = "0.3.5"
 unindent = "0.1.5"
